# wazero

./: .gitattributes  .gitignore  .golangci.yml  .travis.yml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  RATIONALE.md  README.md  Vagrantfile  builder.go  builder_test.go  cache.go  cache_example_test.go  cache_test.go  clock.wasm  codecov.yml  config.go  config_example_test.go  config_supported.go  config_test.go  config_unsupported.go  context_done_example_test.go  dwarf_test.go  engineext.go  ensure_termination_example_test.go  example_test.go  fsconfig.go  fsconfig_example_test.go  fsconfig_test.go  go.mod  go.sum  namespace.go  namespace_test.go  netlify.toml  replaceWazeroImports.sh  runtime.go  runtime_test.go  (+7 more)
.circleci/: config.yml
.github/: CODEOWNERS  wasi_testsuite_adapter.py  wasi_testsuite_skip.json
.netlify/: state.json
a/: main.go
api/: features.go  features_test.go  host.go  wasi.go  wasm.go  wasm_test.go
assemblyscript/: assemblyscript.go  assemblyscript_example_test.go  assemblyscript_test.go
bench/: bench._test.go  bench_fac_iter_test.go  bench_test.go  debug_bench_test.go
emscripten/: emscripten.go  emscripten_example_test.go  emscripten_test.go
examples/: README.md  add_test.go  fibonacci_test.go  file_system_test.go  go_abi_test.go  (+9 more)
examples/bindgen/rust/bindgen-macro/: Cargo.toml
examples/bindgen/rust/bindgen-macro/src/: lib.rs
internal/engine/cranelift/compiler/: Cargo.toml  cranelift_backend.wasm
internal/engine/cranelift/compiler/src/: context.rs  func_env.rs  lib.rs  target.rs  validator.rs  vmctx.rs
(+7660 files in other folders)
